--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="eng">
 
 <head>
     <meta charset="UTF-8">
@@ -810,7 +810,7 @@ footer {
 <div class="container-xxl bg-white p-0">
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 px-4 sticky-top" style="background-color: #004080;">
-        <a href="index.html" class="navbar-brand d-flex align-items-center">
+        <a href="#" class="navbar-brand d-flex align-items-center">
             <img src="images/real_estate_icon.png" alt="icon" class="img-fluid">
             <h1 class="ms-2">Abdulkhaliq's Property Solutions</h1>
         </a>
@@ -928,7 +928,8 @@ footer {
         </div>
       </div>
       <!-- End Modal -->
-      <script>document.getElementById('currency').addEventListener('change', function() {
+      <script>
+      document.getElementById('currency').addEventListener('change', function() {
         var selectedCurrency = this.value;
         document.getElementById('propertyPrice').value = selectedCurrency + " " + document.getElementById('propertyPrice').value.replace(/[^0-9.]/g, '');
       });
@@ -1847,3 +1848,6 @@ window.onload = function() {
 
 </body>
 </html>
+
+
+
